# agent-company

./: README.md  langgraphflow.md
backend/: .gitignore  pyproject.toml  requirements.txt  research.db
backend/context/: .gitkeep
backend/src/backend/: config.py  gemini_service.py  main.py  models.py  ollama_service.py
backend/src/backend/agents/: __init__.py
backend/src/backend/agents/research/: __init__.py  graph.py  state.py
backend/src/backend/agents/research/followup/: __init__.py  followup_graph.py  followup_nodes.py  followup_state.py
backend/src/backend/agents/research/nodes/: __init__.py  cache_checker.py  context_builder.py  fetch_article.py  planner.py  relevance_filter.py  report_node.py  search_node.py  source_selector.py  summarizer.py
backend/src/backend/db/: __init__.py  cache.py  database.py  models.py
backend/src/backend/profiles/: default_sources.json
backend/src/backend/routers/: chat.py  research.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/sources/: page.tsx
frontend/src/app/sources/components/: SourceCard.tsx  SourceFormModal.tsx  SourceTable.tsx
frontend/src/components/: Markdown.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  sources-api.ts
