[project]
name = "backend"
version = "0.1.0"
description = "Chatbot backend powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "google-genai>=2.9.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = true
